<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.MainFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/multiplayerGame"
        style="@style/regularButton"
        android:text="@string/multiplayerGame"/>

    <Button
        android:id="@+id/singleplayerGame"
        style="@style/regularButton"
        android:text="@string/singleplayerGame"/>

    <Button
        android:id="@+id/addQuestions"
        style="@style/regularButton"
        android:text="@string/addQuestions"/>

    <Button
        android:id="@+id/changeQuestions"
        style="@style/regularButton"
        android:text="@string/changeQuestions"/>

</LinearLayout>